# my-voice

./: .gitignore  Cargo.toml  README.md  ideas.md  plan.md
.github/workflows/: ci.yml
samples/: expected.txt
src/: audio.rs  autostart.rs  config.rs  download.rs  keybind_capture.rs  main.rs  model_cache.rs  models.rs  notify.rs  text.rs
src/hotkey/: linux.rs  macos.rs  mod.rs
src/injector/: linux.rs  macos.rs  mod.rs
src/transcriber/: mod.rs  moonshine.rs  whisper.rs
src/ui/: linux.rs  macos.rs  mod.rs
tests/: wer.rs
tools/: README.md  base_results.txt  baseline-results.txt  bench-wer.sh  eval.sh  fetch-librispeech-samples.sh
