[package]
name = "my-voice"
version = "0.1.0"
edition = "2021"
description = "Hold-to-talk local voice typing. English. Fast. Lean."
license = "MIT"
repository = "https://github.com/alexljenkins/my-voice"

[dependencies]
# Audio
cpal = "0.15"
# wav I/O for the debug-tools CLI (--test/--wav/--record); not in the default build.
hound = { version = "3.5", optional = true }
rubato = "0.14"          # sinc/FFT resampler (§8a)

# Moonshine inference (primary backend, always compiled). ort 2.x is still rc;
# pin the rc voxtype ships with. Default features include `download-binaries`,
# which fetches a prebuilt static ONNX Runtime at build time.
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.16"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# CLI + config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

# whisper.cpp backend — opt-in; compiles C++ via cmake.
whisper-rs = { version = "0.16", optional = true }

# Model download + integrity check.
ureq = "2"
sha2 = "0.10"

# Util
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
num_cpus = "1.16"
sonora = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"           # kernel-level hotkey + uinput passthrough
libc = "0.2"
arboard = "3"
zbus = "5"               # pure-Rust D-Bus (blocking API) for AT-SPI injection
# pure-Rust StatusNotifierItem tray over zbus (no GTK, no libdbus). async-io
# matches zbus's default backend (no second runtime); blocking API for the sync daemon.
ksni = { version = "0.3", default-features = false, features = ["blocking", "async-io"] }
# pure-Rust X11 protocol impl for XGrabKey hotkey backend (no C xcb/x11 libs).
x11rb = { version = "0.13", default-features = false }
# pure-Rust D-Bus desktop notifications (z feature = zbus backend, no C libdbus).
notify-rust = { version = "4", default-features = false, features = ["z"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
libc = "0.2"             # flock single-instance + signal handler

[features]
default = []
whisper = ["dep:whisper-rs"]
# Capture/transcribe diagnostics (--test/--wav/--record). Off by default — these
# add CLI surface non-technical users don't need and pull in `hound`.
debug-tools = ["dep:hound"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 1            # debug-mode inference is unusably slow otherwise
